Revision history for Template-Plugin-MultiMarkdown
==================================================

        - new maintainer: BARBIE.
        - change file dates changed to meet W3CDTF standards.

0.06    2013-06-22
        - Added dependency on parent

0.04    2013-06-21
        - Added code to use Text::MultiMarkdown:XS if it is available

0.03    2009-03-03T20:29:30
        - added dependency on Template

0.02    2009-03-02T20:46:03
        - added proper "kwalitee" tests and generally tidied up distribution

0.01    2008-03-24T17:06:40
	    - original version - based on Template::Plugin::Markdown