@@ -1,13 +1,28 @@
+#!/usr/bin/perl
+
+use strict;
+use warnings;
+use 5.006;
+
 use ExtUtils::MakeMaker;
+
 WriteMakefile(
-    NAME              => 'Template::Plugin::MultiMarkdown',
-    VERSION_FROM      => 'lib/Template/Plugin/MultiMarkdown.pm',
-    PREREQ_PM         => {
-        parent              => 0,
-        Template            => 2.16,
-	Text::MultiMarkdown => '1.0.1',
+    AUTHOR          => 'Barbie <barbie@cpan.org>',
+    NAME            => 'Template::Plugin::MultiMarkdown',
+    VERSION_FROM    => 'lib/Template/Plugin/MultiMarkdown.pm',
+    ABSTRACT        => 'TT plugin for Text::MultiMarkdown',
+    NO_META         => 1,
+    PREREQ_PM => {
+
+        # prereqs
+        'parent'                    => '0',
+        'Template'                  => '2.16',
+        'Template::Plugin::Filter'  => '2.16',
+	    'Text::MultiMarkdown'       => '1.0.1',
+
+        # for testing
+        'IO::File'                  => 0,
+        'Test::More'                => 0.70
+
     },
-    ($] >= 5.005 ?
-      (ABSTRACT_FROM  => 'lib/Template/Plugin/MultiMarkdown.pm',
-       AUTHOR         => 'Andrew Ford <andrew@ford-mason.co.uk>') : ()),
 );
