@@ -1,35 +1,66 @@
-NAME
-    Template::Plugin::MultiMarkdown - TT plugin for Text::MultiMarkdown
+Template-Plugin-MultiMarkdown
+=============================
 
-SYNOPSIS
-      [% USE MultiMarkdown -%]
-      [% FILTER multimarkdown %]
-      #Foo
-      Bar
-      ---
-      *Italic* blah blah
-      **Bold** foo bar baz
-      [%- END %]
+Template::Plugin::MultiMarkdown wraps Text::MultiMarkdown::XS and
+Text::MultiMarkdown into a Template Toolkit plugin, and will filter your MultiMarkdown
+text into HTML.  By default the plugin will select the XS implementation over the pure
+perl version, but the implementation can be chosen explictly by specifying a parameter
+'implementation' to the USE or FILTER statements.
 
-DESCRIPTION
-    Template::Plugin::MultiMarkdown is a plugin for TT, which will format
-    your text with MultiMarkdown Style.
+INSTALLATION
 
-METHODS AND SUBROUTINES
-    There are two methods required by the TT plugin API:
+To install this module type the following:
 
-    "init()"
-    "filter()"
+   perl Makefile.PL
+   make
+   make test
+   make install
 
-SEE ALSO
-    Template, Text::MultiMarkdown,
-    <http://fletcherpenney.net/multimarkdown/>
+DEPENDENCIES
 
-AUTHOR
-    Andrew Ford <A.Ford@ford-mason.co.uk> (based on the
-    Template::Plugin::Markdown TT plugin by Naoya Ito
-    <naoya@bloghackers.net>).
+This module requires these modules:
 
-    This library is free software; you can redistribute it and/or modify it
-    under the same terms as Perl itself.
+  Carp
+  Template
+  Template::Plugin::Filter
+  Text::MultiMarkdown
 
+Optionally it will require the following module:
+
+  Text::MultiMarkdown::XS
+
+For testing the module requires these modules:
+
+  IO::File
+  Test::More
+
+For optional testing the module would like these modules:
+
+  Test::CPAN::Meta
+  Test::CPAN::Meta::JSON
+  Test::Pod
+  Test::Pod::Coverage
+
+DEDICATION
+
+This distribution was originally created by Andrew Ford. Sadly in early 2014,
+Andrew was diagnosed with Pancreatic Cancer and passed away peacfully at home
+on 25th April 2014.
+
+One of his wishes was for his OpenSource work to continue. At his funeral, many
+of his colleagues and friends, spoke of how he felt like a person of the world, 
+and how he embrace the idea of OpenSource being for the benefit of the world.
+
+Anyone wishing to donate in memory of Andrew, please consider the following
+charities:
+
+* Dignity in Dying - http://www.dignityindying.org.uk/
+* Marie Curie Cancer Care - http://www.mariecurie.org.uk/
+
+COPYRIGHT AND LICENSE
+
+  Copyright (C) 2008-2014 Andrew Ford
+  Copyright (C) 2014      Barbie for Miss Barbell Productions.
+
+This distribution is free software; you can redistribute it and/or
+modify it under the Artistic Licence v2.
